Fixed unittests for jdk17