@@ -92,7 +92,10 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
                 <configuration>
-                    <argLine>-Djrd.location=${project.parent.basedir}</argLine>
+                    <argLine>
+                        -Djrd.location=${project.parent.basedir}
+                        --add-exports jdk.jdeps/com.sun.tools.javap=ALL-UNNAMED
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
